--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,13 +19,13 @@ if (isNewArchitectureEnabled()) {
     apply plugin: "com.facebook.react"
 }
 
-def getExtOrDefault(name) {
-    return rootProject.ext.has(name) ? rootProject.ext.get(name) : project.properties["LocalNotification_" + name]
-}
+// def getExtOrDefault(name) {
+//     return rootProject.ext.has(name) ? rootProject.ext.get(name) : project.properties["LocalNotification_" + name]
+// }
 
-def getExtOrIntegerDefault(name) {
-    return rootProject.ext.has(name) ? rootProject.ext.get(name) : (project.properties["LocalNotification_" + name]).toInteger()
-}
+// def getExtOrIntegerDefault(name) {
+//     return rootProject.ext.has(name) ? rootProject.ext.get(name) : (project.properties["LocalNotification_" + name]).toInteger()
+// }
 
 def supportsNamespace() {
     def parsed = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')
@@ -47,7 +47,7 @@ android {
         }
     }
 
-    compileSdkVersion getExtOrIntegerDefault("compileSdkVersion")
+    compileSdkVersion 34
 
     defaultConfig {
         minSdkVersion getExtOrIntegerDefault("minSdkVersion")
