--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:7.2.1"
+        classpath "com.android.tools.build:gradle:8.0.0"
     }
 }
 
@@ -19,20 +19,12 @@ if (isNewArchitectureEnabled()) {
     apply plugin: "com.facebook.react"
 }
 
-// def getExtOrDefault(name) {
-//     return rootProject.ext.has(name) ? rootProject.ext.get(name) : project.properties["LocalNotification_" + name]
-// }
-
-// def getExtOrIntegerDefault(name) {
-//     return rootProject.ext.has(name) ? rootProject.ext.get(name) : (project.properties["LocalNotification_" + name]).toInteger()
-// }
-
 def supportsNamespace() {
     def parsed = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')
     def major = parsed[0].toInteger()
     def minor = parsed[1].toInteger()
 
-    // Namespace support was added in 7.3.0
+    // Namespace support was added in AGP 7.3.0
     return (major == 7 && minor >= 3) || major >= 8
 }
 
@@ -50,8 +42,8 @@ android {
     compileSdkVersion 34
 
     defaultConfig {
-        minSdkVersion getExtOrIntegerDefault("minSdkVersion")
-        targetSdkVersion getExtOrIntegerDefault("targetSdkVersion")
+        minSdkVersion 21 // Ensure this matches the minimum requirement
+        targetSdkVersion 34 // Latest target SDK
     }
 
     buildTypes {
@@ -60,13 +52,13 @@ android {
         }
     }
 
-    lintOptions {
+    lint {
         disable "GradleCompatible"
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
@@ -75,16 +67,16 @@ repositories {
     google()
 }
 
+// configurations.maybeCreate("default")
+// artifacts.add("default", file('DeviceAPI_ver20231208_release.aar'))
+
 dependencies {
-    // For < 0.71, this will be from the local maven repo
-    // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
-    //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"
-    compileOnly files('libs/DeviceAPI_ver20231208_release.aar')
-    implementation fileTree(dir: 'libs', include: ['*.jar*'])
+    implementation fileTree(dir: 'libs', include: ['*.*'])
     implementation files('libs/jxl.jar')
+    implementation files('libs2/DeviceAPI_ver20231208_release.aar')
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
