--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,6 +14,7 @@ def isNewArchitectureEnabled() {
 }
 
 apply plugin: "com.android.library"
+apply plugin: "maven-publish"
 
 if (isNewArchitectureEnabled()) {
     apply plugin: "com.facebook.react"
@@ -64,6 +65,7 @@ android {
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
     google()
 }
 
