--- a/android/build.gradle
+++ b/android/build.gradle
@@ -74,9 +74,9 @@ repositories {
 
 dependencies {
     // implementation "com.facebook.react:react-native:+"
-    implementation fileTree(dir: 'libs', include: ['*.*'])
-    implementation files('libs/jxl.jar')
-    implementation files('libs2/DeviceAPI_ver20231208_release.aar')
+    // implementation fileTree(dir: 'libs', include: ['*.*'])
+    // implementation files('libs/jxl.jar')
+    // implementation files('libs2/DeviceAPI_ver20231208_release.aar')
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
