--- a/android/build.gradle
+++ b/android/build.gradle
@@ -73,7 +73,7 @@ repositories {
 // artifacts.add("default", file('DeviceAPI_ver20231208_release.aar'))
 
 dependencies {
-    // implementation "com.facebook.react:react-native:+"
+    implementation "com.facebook.react:react-native:0.75.3"
     // implementation fileTree(dir: 'libs', include: ['*.*'])
     // implementation files('libs/jxl.jar')
     // implementation files('libs2/DeviceAPI_ver20231208_release.aar')
